--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 ##Update database's structure at every change
-spring.jpa.hibernate.ddl-auto=update 
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/carga_horas
 spring.datasource.username=root
-spring.datasource.password=Camino04
+spring.datasource.password=
+server.port=8082
