--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/carga_horas
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Camino04
 server.port=8082
