--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ##Update database's structure at every change
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/carga_horas
+spring.datasource.url=jdbc:mysql://localhost:3306/carga_horas?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Camino04
-server.port=8082
+spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8080
