--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ####Update database's structure at every change
 spring.datasource.url=jdbc:mysql://localhost:3306/carga_horas?autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Camino04
 ####spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8080
