--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/carga_horas?autoReconnect=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Camino04
-####spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+####spring.jpa.hibernate.ddl-auto=create-drop
 server.port=8080
