--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -1,6 +1,6 @@
-##Update database's structure at every change
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db
-spring.datasource.username=
-spring.datasource.password=
-server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/db?autoReconnect=true&useSSL=false
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.jpa.hibernate.ddl-auto=create-drop
+server.port=9000
+db.data.fake=true
